Password page fixes for the most part (#89)
* Front end fully set up, open to color changes/icons to implement light mode and dark mode

* Fixed size of website

* Worked on background color, centering divs, added checkbox

* front end improve

* add logo image and logo UI, icon

* background color

* create password page

* save password to json file

* done with all features

* Added help box functionality (layering is messed up though)

* Create package-lock.json

* Update preload.js to resolve conflicts

* Update preload.js to resolve conflicts

* Fix lint issues

* fix lint issues

* Added some documentation to main.js for password functions

* fix lint errors triggered by documentation

* Deleted a console.log

* Increased size of the x to close the pop up, and fixed our help page

* just added a couple comments on password.js

* Fixed the help button popup in order to prevent scrolling into other elements

* Fixed lint issues

* remove package-lock.json in the root directory

* Emptied out the password field

* Emptied out the password field

* Completed tasks 1-5 of the "Password Page integration and final touches" GitHub issue

* Fixes the bug where our create password was not disappearing after a password was created

* fixes lint changes

* Working on encrypt function

* password done done

* Merge branch 'main' into ExtraCalendarFeatures

* fix lint issues

* fix lint issues

* fix e2e tests

---------

--- a/source/styles/passwordPage.css
+++ b/source/styles/passwordPage.css
@@ -139,10 +139,10 @@ footer {
     line-height: normal;
 }
 .passwordSecondLine {
-    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -5px;
 }
 .passwordSecondLine input[type="checkbox"]{
     width: 32px;
@@ -194,7 +194,7 @@ img{
     display: flex;
     justify-content: center;
     height: 20%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .passwordThirdLine button{
     background-color: silver;
@@ -284,3 +284,43 @@ img{
     display: none;
 }
 
+#invalidPassword{
+    text-align: center;
+    color: transparent;
+    font-size: 25px;
+    margin-top: -4px;
+}
+
+.help-section {
+    display: block; 
+    font-family: Inter;
+}
+
+.section p {
+    margin: 0 0 5px 0; 
+    font-family: Inter;
+    font-size: 24px;
+}
+
+.section ul {
+    margin: 0;
+    padding-left: 20px; 
+    font-family: Inter;
+}
+
+.help-section b {
+    display: block;
+    font-size: 40px; 
+    padding-right: 40px;
+    margin-bottom: 10px; 
+    font-family: Inter;
+}
+
+.section ul li.indented {
+    position: relative;
+    left: 20px; 
+}
+
+.section {
+    padding-left: 20px;
+}
